added newest website

--- a/bib.bib
+++ b/bib.bib
@@ -137,6 +137,45 @@ pages={213-221},
 language={English}
 }
 
+@ARTICLE{4800404, 
+journal={IEEE Std 1363.1-2008}, 
+title={IEEE Standard Specification for Public Key Cryptographic Techniques Based on Hard Problems over Lattices}, 
+year={2009}, 
+month={March}, 
+pages={C1-69}, 
+keywords={IEEE standards;public key cryptography;IEEE standard specification;digital signatures;identification;public key cryptographic techniques;secret value derivation;encryption, lattice-based cryptography, public key cryptography}, 
+doi={10.1109/IEEESTD.2009.4800404},}
+
+@incollection{Goldreich_ggh_crypto_97,
+year=1997,
+isbn={978-3-540-63384-6},
+booktitle={CRYPTO},
+volume=1294,
+series={Lecture Notes in Computer Science},
+editor={Kaliski, BurtonS., Jr.},
+doi={10.1007/BFb0052231},
+title={Public-key cryptosystems from lattice reduction problems},
+publisher={Springer Berlin Heidelberg},
+keywords={Public-Key Cryptosystems; Lattice Reduction Problems},
+author={Goldreich, Oded and Goldwasser, Shafi and Halevi, Shai},
+pages={112-131},
+language={English}
+}
+
+@incollection{Hoffstein_NTRU_1998,
+year=1998,
+isbn={978-3-540-64657-0},
+booktitle={Algorithmic Number Theory},
+volume=1423,
+series={Lecture Notes in Computer Science},
+editor={Buhler, JoeP.},
+title={{NTRU}: A ring-based public key cryptosystem},
+publisher={Springer Berlin Heidelberg},
+author={Hoffstein, Jeffrey and Pipher, Jill and Silverman, JosephH.},
+pages={267-288},
+language={English}
+}
+
 @ARTICLE{Djurovic_aliasing_2012, 
 author={S. Djukanovi\'{c} and I. Djurovi\'{c}}, 
 journal={Signal Processing}, 
@@ -158,6 +197,68 @@ pages={190-223},
 language={English}
 }
 
+@ARTICLE{Akhlaqbasisconstruction2015, 
+author={Akhlaq, A. and McKilliam, R.G. and Subramanian, R.}, 
+journal=ieeespl, 
+title={Basis Construction for Range Estimation by Phase Unwrapping}, 
+year=2015, 
+month={Nov}, 
+volume=22, 
+number=11, 
+pages={2152-2156}, 
+keywords={Estimation;Lattices;Least squares approximations;Receivers;Signal processing algorithms;Wavelength measurement;Zinc;Closest lattice point;phase unwrapping;range estimation}, 
+doi={10.1109/LSP.2015.2465153}, 
+ISSN={1070-9908}}
+
+@article{Finke_Pohst_fast_short_vector_1985,
+title={Improved methods for calculating vectors of short length in a lattice, including a complexity analysis},
+author={U. Fincke and M. Pohst},
+journal={Math. Comp.},
+volume=44,
+year=1985, 
+pages={463--471} 
+}
+
+@ARTICLE{1362891, 
+author={Tanner, R.M. and Sridhara, D. and Sridharan, A. and Fuja, T.E. and Costello, D.J.}, 
+journal=ieeetit, 
+title={LDPC block and convolutional codes based on circulant matrices}, 
+year=2004, 
+month={Dec}, 
+volume=50, 
+number=12, 
+pages={2966-2984}, 
+keywords={algebraic codes;block codes;convolutional codes;cyclic codes;graph theory;iterative decoding;message passing;parity check codes;sparse matrices;LDPC codes;algebraically structured quasicyclic low-density parity-check code;block codes;block length;circulant matrices;convolutional codes;encoding technique;graph-based iterative message-passing decoding;minimum distance code;sparse parity-check matrices;AWGN;Bit error rate;Block codes;Convolution;Convolutional codes;Iterative decoding;Parity check codes;Signal to noise ratio;Sparse matrices;Very large scale integration;65;Circulant matrices;LDPC;LDPC codes;LDPC convolutional codes;QC;block codes;codes;iterative decoding;low-density parity-check;message-passing;quasi-cyclic}, 
+doi={10.1109/TIT.2004.838370}, 
+ISSN={0018-9448},}
+
+@article{Djurović_qml_iet,
+title={Quasi-maximum-likelihood estimator of polynomial phase signals},
+author={Djurovi\'{c}, I. and Stankovi\'{c}, L.}, 
+journal={IET Signal Processing}, 
+volume=8,
+issue=4,	
+year=2014,
+pages={347--359}
+}
+
+@unpublished{Akhlaq_basis_construction_range_est_2015,
+title={Basis construction for range estimation by phase unwrapping},
+author={Assad Akhlaq and R.~G.~McKilliam and R. Subramanian},
+note={submitted to IEEE Signal Processing Letters},
+year=2015,
+month={Jun.}
+}
+
+@article{Djurovic_STFT_estimator,
+title={{STFT}-based estimator of polynomial phase signals},
+author={Igor Djurovi\'{c} and Ljubisa Stankovi\'{c}},
+journal={Signal Processing},
+year=2012,
+volume=92,
+pages={2769--2774}
+}
+
 @article{diebolt1996,
 ajournal = "Ann. Probab.",
 author = {J. Diebolt and C. Posse},
@@ -171,6 +272,62 @@ volume = 24,
 year = 1996
 }
 
+@article{Goldstein_2d_phase_unwrapping_classic,
+author={R. M. Goldstein and H. A. Zebker and C. L.  Werner},
+title={Satellite radar interferometry: Two-dimensional phase unwrapping},
+journal={Radio Science}, 
+volume=23,
+number=4, 
+pages={713--720}, 
+month={Jul.},
+year=1988 
+}
+
+@article{MRM:MRM10354,
+author = {Jenkinson, Mark},
+title = {Fast, automated, $N$-dimensional phase-unwrapping algorithm},
+journal = {Magnetic Resonance in Medicine},
+volume = 49,
+number = 1,
+publisher = {Wiley Subscription Services, Inc., A Wiley Company},
+issn = {1522-2594},
+pages = {193--197},
+keywords = {phase unwrapping, echo planar imaging (EPI), field mapping, venogram, automated shimming},
+year = 2003,
+}
+@book{Teunissen_GPS_for_geodesy,
+series={Lecture Notes in Earth Sciences},
+booktitle={GPS for Geodesy},
+editors={P. Teunissen and A. Kleusberg},
+publisher={Springer},
+year=1996
+}
+
+@ARTICLE{1024422, 
+author={Akyildiz, I.F. and Weilian Su and Sankarasubramaniam, Y. and Cayirci, E.}, 
+journal={Communications Magazine, IEEE}, 
+title={A survey on sensor networks}, 
+year=2002, 
+month={Aug}, 
+volume=40, 
+number=8, 
+pages={102-114}, 
+keywords={protocols;radio networks;sensors;CSMA;carrier sense multiple access;data processing;health;home applications;hybrid TDMA/FDMA-Based;low-cost sensor networks;military applications;multifunctional sensor nodes;protocol stack layer;research;sensor networks;wireless communications;wireless electronics;Ad hoc networks;Capacitive sensors;Intelligent sensors;Military communication;Military computing;Patient monitoring;Protocols;Sensor phenomena and characterization;Wireless communication;Wireless sensor networks}, 
+doi={10.1109/MCOM.2002.1024422}, 
+ISSN={0163-6804},}
+
+@ARTICLE{5771026, 
+author={Alexander, P. and Haley, D. and Grant, A.}, 
+journal={Proceedings of the IEEE}, 
+title={Cooperative Intelligent Transport Systems: 5.9-GHz Field Trials}, 
+year=2011, 
+month={July}, 
+volume=99, 
+number=7, 
+pages={1213-1235}, 
+keywords={channel estimation;cooperative communication;fading channels;mobility management (mobile radio);vehicular ad hoc networks;wireless LAN;802.11p;V2V safety;WAVE standards;channel estimation;cooperative intelligent transport systems;doubly-selective fading channel;frequency 5.9 GHz;mobile outdoor radio environment;mobility;multipath propagation;non-line-of-sight conditions;off-the-shelf WiFi-based radio equipment;performance evaluation;vehicle-to-infrastructure applications;vehicle-to-vehicle safety;vehicular communications;Bandwidth;Cooperative systems;Doppler effect;Intelligent vehicles;Road transportation;Safety;Vehicle crash testing;Channel estimation;channel models;time-varying channels;vehicle safety}, 
+doi={10.1109/JPROC.2011.2105230}, 
+ISSN={0018-9219},}
 
 @article{Rice_formula_crossings_1944,
 author={Rice, S. O.}, 
@@ -203,6 +360,104 @@ pages={282–332}
   timestamp = {2008.03.03}
 }
 
+@ARTICLE{Pimentel_weight_enumerator_conv_code, 
+author={C. Pimentel}, 
+journal=ieeetcom, 
+title={On the computation of weight enumerators for convolutional codes}, 
+year=2003, 
+month={Mar.}, 
+volume=51, 
+number=3, 
+pages={313-317}, 
+doi={10.1109/TCOMM.2003.809726}, 
+ISSN={0090-6778},}
+
+@incollection{Peikert_lattice_crypto_internet,
+year={2014},
+isbn={978-3-319-11658-7},
+booktitle={Post-Quantum Cryptography},
+volume={8772},
+series={Lecture Notes in Computer Science},
+editor={Mosca, Michele},
+title={Lattice Cryptography for the Internet},
+publisher={Springer International Publishing},
+author={Peikert, Chris},
+pages={197-219},
+language={English}
+}
+
+@article{Nebe_extremal_72,
+title={On extremal even unimodular 72-dimensional lattices},
+author={Gabriele Nebe and Richard Parker}, 
+journal={Math. Comp.},
+number=83,
+year=2014, 
+pages={1489--1494}, 
+}
+
+@article{Nebe_cyclo-quaternionic_48n,
+author={Gabriele Nebe}, 
+title={Some cyclo-quaternionic lattices}, 
+journal={J. Algebra},
+volumne=199, 
+year=1998, 
+number=2, 
+pages={472--498}
+}
+
+@article{Nguyen_learning_ppd_ntru,
+year=2009,
+issn={0933-2790},
+journal={Journal of Cryptology},
+volume=22,
+number=2,
+doi={10.1007/s00145-008-9031-0},
+title={Learning a Parallelepiped: Cryptanalysis of {GGH} and {NTRU} Signatures},
+publisher={Springer-Verlag},
+keywords={GGH; NTRUSign; Lattices; Moment; Gradient descent; Public-key cryptanalysis},
+author={Nguyen, P.. and Regev, O.},
+pages={139-160}
+}
+
+@incollection{Nyguen_bbd_ntru_attack,
+year=2013,
+isbn={978-3-642-36094-7},
+booktitle={Topics in Cryptology},
+volume=7779,
+series={Lecture Notes in Computer Science},
+editor={Dawson, Ed},
+title={Solving BDD by Enumeration: An Update},
+publisher={Springer Berlin Heidelberg},
+author={Liu, M. and Nguyen, P.},
+pages={293-309},
+language={English}
+}
+
+@ARTICLE{Au_accelerated_weight_enum_conv_code, 
+author={E.K.S. Au and Wai Ho Mow}, 
+journal=ieeetwc, 
+title={On Accelerating the Computation of Weight Enumerators for Convolutional Codes}, 
+year=2008, 
+month={Jun.}, 
+volume=7, 
+number=6, 
+pages={2009-2014}, 
+doi={10.1109/TWC.2008.061108}, 
+ISSN={1536-1276},}
+
+@ARTICLE{1495485, 
+author={Bello, J.P. and Daudet, L. and Abdallah, S. and Duxbury, C. and Davies, M. and Sandler, Mark B.}, 
+journal={Speech and Audio Processing, IEEE Transactions on}, 
+title={A Tutorial on Onset Detection in Music Signals}, 
+year=2005, 
+month={Sept}, 
+volume=13, 
+number=5, 
+pages={1035-1047}, 
+keywords={acoustic signal processing;signal detection;time-frequency analysis;indexing techniques;model-based change point detection;music signals;onset detection;probabilistic signal models;signal amplitude envelope;signal short-time spectrum;spectral magnitudes;time-frequency representations;Envelope detectors;Guidelines;Indexing;Multiple signal classification;Phase detection;Signal analysis;Signal detection;Testing;Time frequency analysis;Tutorial;Attack transcients;audio;note segmentation;novelty detection}, 
+doi={10.1109/TSA.2005.851998}, 
+ISSN={1063-6676},}
+
 @ARTICLE{Viterbo_sphere_decoder_1999,
 title={A universal lattice code decoder for fading channels},
 author={E. Viterbo and J. Boutros},
@@ -216,6 +471,17 @@ abstract={We present a maximum-likelihood decoding algorithm for an arbitrary la
 keywords={combined source-channel coding, fading channels, lattice theory, maximum likelihood decoding, search problemsarbitrary lattice code, bounded distance search, channel state information, decoding radius, fading channels, lattice points, maximum-likelihood decoding algorithm, received point, receiver, universal lattice code decoder},
 doi={10.1109/18.771234},
 ISSN={0018-9448}
+}
+
+@incollection{McEliece_weight_enumerator_conv_code,
+author={R. J. McEliece}, 
+title={How to compute weight enumerators for convolutional codes},
+booktitle={Communications and Coding},
+editor={M. Darnell and B. Honary},
+address={New York},
+publisher={Wiley}, 
+year=1998,
+pages={121-141}
 }
 
 @ARTICLE{Wubben_2011, 
@@ -327,6 +593,49 @@ keywords={distance measurement;lattice theory;maximum likelihood estimation;phas
 doi={10.1109/TSP.2013.2238934},
 ISSN={1053-587X},}
 
+@BOOK{Ridleyspeechpolyphase1989,
+  title = {Speech time-frequency representations},
+  publisher = {Kluwer Academic Publishers},
+address = {Boston},
+  year = 1989,
+  author = {M. D. Ridley}
+}
+
+@ARTICLE{Hlawatsch_lin_quad_time_freq_spmag_1992, 
+author={F. Hlawatsch and G. F. Boudreaux-Bartels}, 
+journal={IEEE Signal Processing Magazine}, 
+title={Linear and quadratic time-frequency signal representations}, 
+year=1992, 
+month={Apr.}, 
+volume=9, 
+number=2, 
+pages={21-67}, 
+keywords={Wigner distribution;ambiguity function;linear representations;quadratic representations;short-time Fourier transform;time-frequency signal representations;time-varying signal processing;tutorial review;wavelet transform;frequency-domain analysis;reviews;signal processing;time-domain analysis;transforms;}, 
+doi={10.1109/79.127284}, 
+ISSN={1053-5888}
+}
+
+@ARTICLE{Tsakonas_Jalden_Huber_convergence,
+author={E. Tsakonas and J. Jalden and N. Sidiropoulos and B. Ottersten},
+journal=ieeespl,
+title={Convergence of the {Huber} Regression {M}-Estimate in the Presence of Dense Outliers},
+year=2013,
+volume=21,
+number=10,
+pages={1211-1214}
+}
+
+@INPROCEEDINGS{Tsakonas_Jalden_connections, 
+author={Tsakonas, E. and Jalden, J. and Sidiropoulos, N.D. and Ottersten, B.}, 
+booktitle={Acoustics, Speech and Signal Processing (ICASSP), 2013 IEEE International Conference on}, 
+title={Connections between sparse estimation and robust statistical learning}, 
+year=2013, 
+month={May}, 
+pages={5489-5493}, 
+keywords={compressed sensing;maximum likelihood estimation;regression analysis;CRLB;Cramér-Rao lower bound;compressed sensing;linear regression model;maximum likelihood estimator;outlier detection;outlier rejection scheme;relevant ℓ1-based relaxation strategy;robust statistical inference;robust statistical learning;sparse estimation;sparse signal;Linear regression;Maximum likelihood estimation;Noise;Pollution measurement;Robustness;Vectors;Cramér-Rao lower bounds;Sparsity;outlier detection;robustness}, 
+doi={10.1109/ICASSP.2013.6638713}, 
+ISSN={1520-6149},}
+
 @MISC{asrppressreleasewincomm,
   author = {{UniSA}},
   title = {Australian innovators take home international technology award},
@@ -336,11 +645,33 @@ ISSN={1053-587X},}
   note = {\url{http://www.unisa.edu.au/Media-Centre/Releases/Australian-innovators-take-home-international--technology-award/#.U2SGCnWSya6}}
 }
 
+@MISC{micciancio_personal_communication_obtuse_superbasis,
+  author = {Micciancio, Daniel},
+  howpublished = {personal communication},
+  year = 2014
+}
+
+@article{Bradley_mixing_2005, 
+author={Bradley, R.},
+title={Basic Properties of Strong Mixing Conditions. A Survey and Some Open Questions},
+journal={Probability Surveys},
+volume=2,
+pages={107-144}
+}
+
 @book{conway_guy_book_of_numbers_1996,
 author={J. H. Conway and R. Guy},
 year=1996,
 title= {The Book of Numbers},
 publisher={Springer}
+}
+
+@book{leadbetter_1996,
+author={M. R. Leadbetter and G. Lindgren and H. Rootz\'{e}n},
+year=1983,
+title= {Extremes and related properties of random sequences and processes},
+publisher={Springer-Verlag},
+address={New York}
 }
 
 @incollection{book_sphere_free_number_theory_1990,
@@ -385,6 +716,20 @@ volume=23,
 pages={831-867}
 }
 
+@incollection{Lyubashevsky_asymp_eff_lattice_sig_2008,
+year=2008,
+isbn={978-3-540-78523-1},
+booktitle={Theory of Cryptography},
+volume=4948,
+series={Lecture Notes in Computer Science},
+editor={Canetti, Ran},
+title={Asymptotically Efficient Lattice-Based Digital Signatures},
+publisher={Springer Berlin Heidelberg},
+author={Lyubashevsky, Vadim and Micciancio, Daniele},
+pages={37-54},
+language={English}
+}
+
 @article{Pleasants_frobenius_problem_lattices,
 author={P. A. B. Pleasants and H. Ray and K, Steiglitz},
 title={The {Frobenius} problem on lattices},
@@ -420,6 +765,13 @@ url = "http://www.sciencedirect.com/science/article/pii/S0012365X99003842",
 author = "M. Baake and R. V. Moody and P. A.B. Pleasants"
 }
 
+@inproceedings{Dadush_short_paths_Voronoi_graph_soda_2014,
+booktitle={ACM-SIAM Symposium on Discrete Algorithms},
+author={Daniel Dadush and Nicolas Bonifas},
+title={Short Paths on the {Voronoi} Graph and Closest Vector Problem with Preprocessing},
+year=2015,
+pages={295-314}
+}
 
 @INPROCEEDINGS{Haley_gns_4spaper2014,
 author={D. Haley and A. Grant and W. Cowley and L. Davis and I. Land and M. Lavenant and G. Lechner and R. McKilliam and A. Pollok},
@@ -441,7 +793,7 @@ number=1,
 pages={62-66}, 
 keywords={Chirp;Estimation;Fast Fourier transforms;Least squares approximations;Noise measurement;Quantization (signal);Fast Fourier Transform;period estimation}, 
 doi={10.1109/LSP.2014.2345737}, 
-ISSN={1070-9908},}
+ISSN={1070-9908}}
 
 @Article{sym4040566,
 AUTHOR = {Baake, M. and Grimm, U.},
@@ -872,7 +1224,6 @@ volume = 10,
 number = 1,
 publisher = {Blackwell Publishing Ltd},
 issn = {1467-9892},
-url = {http://dx.doi.org/10.1111/j.1467-9892.1989.tb00016.x},
 doi = {10.1111/j.1467-9892.1989.tb00016.x},
 pages = {71--75},
 keywords = {Sinusoid, periodicity, AIC, martingale},
@@ -1107,7 +1458,7 @@ doi={10.1109/18.59937},
 ISSN={0018-9448},}
 
 @article{McKilliam_closest_point_lattice_first_kind_2014,
-author = {McKilliam, R. and Grant, A. and Clarkson, I.},
+author = {R. G. McKilliam and A. Grant and I. V. L. Clarkson},
 title = {Finding a Closest Point in a Lattice of {Voronoi's} First Kind},
 journal = {{SIAM} Journal on Discrete Mathematics},
 volume = 28,
@@ -1967,11 +2318,20 @@ year={2010},
 month={Nov.}
 }
 
+@unpublished{McKilliam_range_est_lattice_basis_2015,
+author={A. Akhlaq and R. G. McKilliam and R. Subramanian},
+title={Basis construction for range estimation by phase unwrapping},
+note={submitted to IEEE Signal Processing Letters},
+year=2015,
+month={Feb.},
+url={http://www.itr.unisa.edu.au/~mckillrg/papers/basis_construction.pdf}
+}
+
 @article{Vallentin_space_tiling_zonotope_2004,
 author={F. Vallentin},
 title={A Note on Space Tiling Zonotopes},
 journal={arXiv:math/0402053v1},
-url={http://http://arxiv.org/abs/math/0402053},
+url={http://arxiv.org/abs/math/0402053},
 year={2004},
 month={Feb.}
 }
@@ -2859,6 +3219,17 @@ address={New York},
 year=1981
 }
 
+@journals{huber_wald_lectures,
+author = "P. J. Huber",
+title={Robust regression: asymptotics, conjectures and Monte Carlo},
+journal={Annals of Statistics},
+year=1973,
+volume=1,
+number=5,
+pages={799-821}
+}
+
+
 @inproceeding{huber1967,
 address = "Berkeley, Calif.",
 author = "P. J. Huber",
@@ -3511,7 +3882,7 @@ ISSN={0090-6778}}
 
 @ARTICLE{micciancio_worst-case_2004,
   author = {D. Micciancio and O. Regev},
-  title = {Worst-case to average-case reductions based on Gaussian measures},
+  title = {Worst-case to average-case reductions based on {Gaussian} measures},
   journal = {{SIAM} J. on Computing},
   year = {2004},
   volume = {37},
@@ -4476,6 +4847,20 @@ ISSN={0018-9448},}
 file = {kichen_pupoly.pdf},
 }
 
+@article{Pauluzzi2000,
+	title = {A comparison of {SNR} estimation techniques for the {AWGN} channel},
+	volume = 48,
+	abstract = {The performances of several signal-to noise ratio ({SNR)} estimation techniques reported in the literature are compared to identify the "best" estimator. The {SNR} estimators are investigated by the computer simulation of baseband binary phase-shift keying ({PSK)} signals in real additive white Gaussian noise ({AWGN)} and baseband 8-{PSK} signals in complex {AWGN.} The mean square error is used as a measure of performance. In addition to comparing the relative performances, the absolute levels of performance are also established; the simulated performances are compared to a published Cramer-Rao bound ({CRB)} for real {AWGN} and a {CRB} for complex {AWGN} that is derived here. Some known estimator structures are modified to perform better on the channel of interest. Estimator structures for both real and complex channels are examined.},
+	number = 10,
+	journal = ieeetcom,
+	author = {Pauluzzi, D. R. and Beaulieu, N. C.},
+	year = 2000,
+month={Oct.},
+	keywords = {Additive white noise, {AWGN} channel, {AWGN} channels, Baseband, baseband 8-{PSK} signals, binary phase-shift keying, complex {AWGN.}, Computer simulation, Cramer-Rao bound, {CRB}, estimation techniques, Gaussian noise, mean square error, Mean square error methods, noise, parameter estimation, performance, phase estimation, Phase shift keying, {PSK}, real additive white Gaussian noise, receivers, signal processing, signal to noise ratio, signal-to noise ratio, {SNR} estimation techniques},
+	pages = {1681--1691},
+}
+
+
 @ARTICLE{Lampe_MSDSD_2005,
 title={Multiple-symbol differential sphere decoding},
 author={L. Lampe and R. Schober and V. Pauli and C. Windpassinger},
@@ -4871,6 +5256,96 @@ url = "http://www.sciencedirect.com/science/article/B7P6H-4FD6Y9M-2T/2/8b1276cb6
 author = "S. Rao Jammalamadaka"
 }
 
+@incollection{Lenstra_factoring_512_2000,
+year=2000,
+isbn={978-3-540-67517-4},
+booktitle={EUROCRYPT},
+volume=1807,
+series={Lecture Notes in Computer Science},
+editor={Preneel, Bart},
+doi={10.1007/3-540-45539-6_1},
+title={Factorization of a 512-Bit RSA Modulus},
+url={http://dx.doi.org/10.1007/3-540-45539-6_1},
+publisher={Springer Berlin Heidelberg},
+author={Cavallar, Stefania and Dodson, Bruce and Lenstra, ArjenK. and Lioen, Walter and Montgomery, PeterL. and Murphy, Brian and te Riele, Herman and Aardal, Karen and Gilchrist, Jeff and Guillerm, Gérard and Leyland, Paul and Marchand, Jöel and Morain, François and Muffett, Alec and Putnam, ChrisandCraig and Zimmermann, Paul},
+pages={1-18},
+language={English}
+}
+
+@incollection{Bleichenbacher_chosen_cyphertext_attack_RSA,
+year=1998,
+isbn={978-3-540-64892-5},
+booktitle={CRYPTO},
+volume=1462,
+series={Lecture Notes in Computer Science},
+editor={Krawczyk, Hugo},
+doi={10.1007/BFb0055716},
+title={Chosen ciphertext attacks against protocols based on the {RSA} encryption standard {PKCS} \#1},
+publisher={Springer Berlin Heidelberg},
+keywords={chosen ciphertext attack; RSA; PKCS; SSL},
+author={Bleichenbacher, Daniel},
+pages={1-12},
+language={English}
+}
+
+@article{Boneh_20_year_attacks_RSA,
+title={Twenty years of attacks on the {RSA} cryptosystem},
+author={D. Boneh},
+journal={Notices of the AMS},
+volume=46, 
+number=2,
+pages={203--213},
+year=1999
+}
+
+@incollection{Lenstra_factoring_768_2010,
+year=2010,
+isbn={978-3-642-14622-0},
+booktitle={CRYPTO},
+volume=6223,
+series={Lecture Notes in Computer Science},
+editor={Rabin, Tal},
+doi={10.1007/978-3-642-14623-7_18},
+title={Factorization of a 768-Bit RSA Modulus},
+url={http://dx.doi.org/10.1007/978-3-642-14623-7_18},
+publisher={Springer Berlin Heidelberg},
+keywords={RSA; number field sieve},
+author={Kleinjung, Thorsten and Aoki, Kazumaro and Franke, Jens and Lenstra, ArjenK. and Thomé, Emmanuel and Bos, JoppeW. and Gaudry, Pierrick and Kruppa, Alexander and Montgomery, PeterL. and Osvik, DagArne and te Riele, Herman and Timofeev, Andrey and Zimmermann, Paul},
+pages={333-350},
+language={English}
+}
+
+@article{Shor_quantum_factoring_siam_1997,
+author={Shor, Peter W.},
+year=1997, 
+title={Polynomial-Time Algorithms for Prime Factorization and Discrete Logarithms on a Quantum Computer}, 
+journal={SIAM J. Comput.},
+volume=26,
+number= 5,
+pages={1484--1509}
+}
+
+@book{post_quantaum_crypto_2009,
+author={Daniel J. Bernstein and Johannes Buchmann and Erik Dahmen},
+title={Post-Quantum Cryptography},
+publisher={Springer},
+year=2009
+}
+
+@incollection{Gentry_crypt_NTRU_2002,
+year={2002},
+isbn={978-3-540-43553-2},
+booktitle={EUROCRYPT},
+volume={2332},
+series={Lecture Notes in Computer Science},
+editor={Knudsen, LarsR.},
+title={Cryptanalysis of the Revised {NTRU} Signature Scheme},
+publisher={Springer Berlin Heidelberg},
+keywords={NSS; NTRU; NTRUSign; Signature Scheme; Lattice Reduction; Cryptanalysis; Orthogonal Lattice; Cyclotomic Integer; Galois Congruence},
+author={Gentry, Craig and Szydlo, Mike},
+pages={299-320},
+language={English}
+}
 
 @article{Jupp_mardia_unified_directional_statistics_1989,
   author = {P. E. Jupp and K. V. Mardia},
@@ -4881,6 +5356,26 @@ volume=57,
 number=3,
 pages={261-294}
 }
+
+@article{impl_shor_15_2001,
+author={Vandersypen, Lieven M. K. and Steffen, Matthias and Breyta, Gregory and Yannoni, Costantino S. and Sherwood, Mark H. and Chuang, Isaac L.},
+year=2001, 
+title={Experimental realization of Shor's quantum factoring algorithm using nuclear magnetic resonance},
+journal={Nature},
+volume=414,
+number=6866,
+pages={883--887}
+}
+
+@INPROCEEDINGS{Lenstra_Silverberg_revisting_gentra_szydlo_2014,
+    author = {H. W. Lenstra and A. Silverberg},
+    title = {Revisiting the {Gentry-Szydlo} Algorithm},
+    booktitle = {Crypto},
+    year = 2014,
+month={Aug.},
+address={Santa Barbara, CA, USA}
+}
+
 
 @article{Marida_geosciences_1981,
 journal={Communications in Statistics - Theory and Methods},
@@ -5123,8 +5618,7 @@ volume=58,
 number=9, 
 pages={5941-5949}, 
 doi={10.1109/TIT.2012.2199462}, 
-ISSN={0018-9448},}
-
+ISSN={0018-9448}}
 
 @inproceedings{McKilliam_direstcro_dasp_2011,
 author={R. G. McKilliam and B. G. Quinn},
@@ -5133,7 +5627,6 @@ year=2011,
 booktitle=dasp,
 month={July}
 }
-
 
 @ARTICLE{McKilliam_polyphase_est_icassp_2011,
   author = {R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson and B. Moran},
@@ -5211,6 +5704,9 @@ ISSN={1550-3607},}
   title = {On the Periodogram Estimator of Period from Sparse, Noisy Timing Data},
   booktitle = {Asilomar Conference on Signals, Systems, and Computers},
   year = 2013,
+month={Nov}, 
+  pages={879--883},
+doi={10.1109/ACSSC.2013.6810414}
 }
 
 @article{McKilliam2010_block_noncoherent_hex,
@@ -5368,7 +5864,7 @@ pages={1426-1430}
 }
 
 @book{minkowski1910geometrie,
-  title={{Geometrie der zahlen}},
+  title={{Geometrie der Zahlen}},
   author={Minkowski, H.},
   year=1910,
   publisher={BG Teubner Leipzig}
@@ -6005,6 +6501,19 @@ ISSN={1930-529X}
   year={1999}
 }
 
+@ARTICLE{838084, 
+author={Rosen, P.A. and Hensley, S. and Joughin, I.R. and Fuk K.Li and Madsen, S.N. and Rodriguez, E. and Goldstein, Richard M.}, 
+journal={Proc. IEEE}, 
+title={Synthetic aperture radar interferometry}, 
+year=2000, 
+month={March}, 
+volume=88, 
+number=3, 
+pages={333-382}, 
+keywords={cartography;geodesy;geophysical techniques;radiowave interferometry;remote sensing by laser beam;surface topography measurement;synthetic aperture radar;cartography;coherent radar signal phase;geodesy;land cover characterization;natural hazards;radar remote sensing;surface topography;synthetic aperture radar interferometry;Extraterrestrial measurements;Geophysical measurements;Hazards;Radar antennas;Radar imaging;Remote sensing;Spaceborne radar;Surface topography;Synthetic aperture radar interferometry;Vegetation mapping}, 
+doi={10.1109/5.838084}, 
+ISSN={0018-9219},}
+
 @article {Rosenblatt_dens_est_1956,
     AUTHOR = {M. Rosenblatt},
      TITLE = {Remarks on some nonparametric estimates of a density function},
@@ -6041,6 +6550,41 @@ MRREVIEWER = {E. L. Lehmann},
   owner = {Robby},
   timestamp = {2007.08.01}
 }
+
+@incollection{Lyubashevsky_micciancio_swiftfft,
+year={2008},
+isbn={978-3-540-71038-7},
+booktitle={Fast Software Encryption},
+volume={5086},
+series={Lecture Notes in Computer Science},
+editor={Nyberg, Kaisa},
+title={{SWIFFT}: A Modest Proposal for {FFT} Hashing},
+publisher={Springer Berlin Heidelberg},
+author={Lyubashevsky, Vadim and Micciancio, Daniele and Peikert, Chris and Rosen, Alon},
+pages={54-72},
+language={English}
+}
+
+@article{Lyubashevsky:2013:ILL:2555516.2535925,
+ author = {Lyubashevsky, Vadim and Peikert, Chris and Regev, Oded},
+ title = {On Ideal Lattices and Learning with Errors over Rings},
+ journal = {J. ACM},
+ issue_date = {November 2013},
+ volume = 60,
+ number = 6,
+ month = nov,
+ year = 2013,
+ issn = {0004-5411},
+ pages = {43:1--43:35},
+ articleno = 43,
+ numpages = 35,
+ url = {http://doi.acm.org/10.1145/2535925},
+ doi = {10.1145/2535925},
+ acmid = 2535925,
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Lattice, average-case hardness, cryptography, public key encryption, quantum computation},
+} 
 
 @ARTICLE{Rice1988,
   author = {J. A. Rice and M. Rosenblatt},
