--- a/robby.bib
+++ b/robby.bib
@@ -14,6 +14,28 @@
 
 @string{procicassp = {Proc. Internat. Conf. Acoust. Spe. Sig. Process.}}
 
+@article{Akhlaqbasisconstruction2015,
+  author = {Akhlaq, A. and McKilliam, R.G. and Subramanian, R.},
+  journal = ieeespl,
+  title = {Basis Construction for Range Estimation by Phase Unwrapping},
+  year = 2015,
+  month = {Nov},
+  volume = 22,
+  number = 11,
+  pages = {2152-2156},
+  keywords = {Estimation;Lattices;Least squares approximations;Receivers;Signal processing algorithms;Wavelength measurement;Zinc;Closest lattice point;phase unwrapping;range estimation},
+  doi = {10.1109/LSP.2015.2465153},
+  issn = {1070-9908}
+}
+
+@unpublished{Akhlaq_basis_construction_range_est_2015,
+  title = {Basis construction for range estimation by phase unwrapping},
+  author = {Assad Akhlaq and R.~G.~McKilliam and R. Subramanian},
+  note = {submitted to IEEE Signal Processing Letters},
+  year = 2015,
+  month = {Jun.}
+}
+
 @inproceedings{Haley_gns_4spaper2014,
   author = {D. Haley and A. Grant and W. Cowley and L. Davis and I. Land and M. Lavenant and G. Lechner and R. McKilliam and A. Pollok},
   title = {Enabling Technologies for a Microsatellite-Based Global Sensor Network},
@@ -118,7 +140,7 @@
 }
 
 @article{McKilliam_closest_point_lattice_first_kind_2014,
-  author = {McKilliam, R. and Grant, A. and Clarkson, I.},
+  author = {R. G. McKilliam and A. Grant and I. V. L. Clarkson},
   title = {Finding a Closest Point in a Lattice of {Voronoi's} First Kind},
   journal = {{SIAM} Journal on Discrete Mathematics},
   volume = 28,
@@ -126,6 +148,15 @@
   pages = {1405-1422},
   year = 2014,
   doi = {10.1137/140952806}
+}
+
+@unpublished{McKilliam_range_est_lattice_basis_2015,
+  author = {A. Akhlaq and R. G. McKilliam and R. Subramanian},
+  title = {Basis construction for range estimation by phase unwrapping},
+  note = {submitted to IEEE Signal Processing Letters},
+  year = 2015,
+  month = {Feb.},
+  url = {http://www.itr.unisa.edu.au/~mckillrg/papers/basis_construction.pdf}
 }
 
 @unpublished{Pollok_McKilliam_crb_cpm_2014,
@@ -323,7 +354,10 @@
   author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
   title = {On the Periodogram Estimator of Period from Sparse, Noisy Timing Data},
   booktitle = {Asilomar Conference on Signals, Systems, and Computers},
-  year = 2013
+  year = 2013,
+  month = {Nov},
+  pages = {879--883},
+  doi = {10.1109/ACSSC.2013.6810414}
 }
 
 @article{McKilliam2010_block_noncoherent_hex,
