Made public. Improved reference counter

--- a/bib.bib
+++ b/bib.bib
@@ -197,8 +197,21 @@ pages={190-223},
 language={English}
 }
 
+@ARTICLE{7523940, 
+author={A. Akhlaq and R. G. McKilliam and R. Subramanian and A. Pollok}, 
+journal={IEEE Transactions on Signal Processing}, 
+title={Selecting Wavelengths for Least Squares Range Estimation}, 
+year=2016, 
+volume=64, 
+number=20, 
+pages={5205-5216}, 
+keywords={Estimation;Lattices;Optical transmitters;Optimization;Receivers;Signal processing algorithms;Wrapping;Range estimation;lattice theory;phase ambiguity}, 
+doi={10.1109/TSP.2016.2595490}, 
+ISSN={1053-587X}, 
+month={Oct},}
+
 @ARTICLE{Akhlaqbasisconstruction2015, 
-author={Akhlaq, A. and McKilliam, R.G. and Subramanian, R.}, 
+author={A. Akhlaq and R. G. McKilliam and R. Subramanian}, 
 journal=ieeespl, 
 title={Basis Construction for Range Estimation by Phase Unwrapping}, 
 year=2015, 
@@ -240,14 +253,6 @@ volume=8,
 issue=4,	
 year=2014,
 pages={347--359}
-}
-
-@unpublished{Akhlaq_basis_construction_range_est_2015,
-title={Basis construction for range estimation by phase unwrapping},
-author={Assad Akhlaq and R.~G.~McKilliam and R. Subramanian},
-note={submitted to IEEE Signal Processing Letters},
-year=2015,
-month={Jun.}
 }
 
 @article{Djurovic_STFT_estimator,
@@ -340,10 +345,9 @@ pages={282–332}
 
 @book{van2009empirical,
   title={Empirical Processes in M-Estimation},
-  author={van de Geer, S.A.},
+  author={van de Geer, S. A.},
   isbn=9780521123259,
   series={Cambridge Series in Statistical and Probabilistic Mathematics},
-  url={http://books.google.com.au/books?id=0VEcQAAACAAJ},
   year=2009,
   publisher={Cambridge University Press}
 }
@@ -3219,9 +3223,9 @@ address={New York},
 year=1981
 }
 
-@journals{huber_wald_lectures,
-author = "P. J. Huber",
-title={Robust regression: asymptotics, conjectures and Monte Carlo},
+@article{huber_wald_lectures,
+author = {P. J. Huber},
+title={Robust regression: asymptotics, conjectures and {Monte-Carlo}},
 journal={Annals of Statistics},
 year=1973,
 volume=1,
@@ -7466,7 +7470,7 @@ month={May}
 }
 
 @ARTICLE{Cadambe_IA_2008, 
-author={V.R.  Cadambe and S.A. Jafar}, 
+author={V. R.  Cadambe and S. A. Jafar}, 
 journal=ieeetit, 
 title={Interference Alignment and Degrees of Freedom of the {K}-User Interference Channel}, 
 year=2008, 
