--- a/bib.bib
+++ b/bib.bib
@@ -137,6 +137,38 @@ pages={213-221},
 language={English}
 }
 
+@inproceedings{McDonnellNN,
+author = {M. D. McDonnell and {\bf R. G. McKilliam} and P. de Chazal},
+title={On the importance of pair-wise feature correlations for image classification},
+booktitle={International Joint Conference on Neural Networks (IJCNN)},
+year=2016
+}
+
+@ARTICLE{McKilliamIEEEPotentials,
+author={{\bf R. G. McKilliam} and D. Haley and A. Pollok and A. Grant and A. Beck and Z. Zhou},
+title={Small Data, Low Cost, Anywhere on Earth},
+journal={IEEE Potentials},
+volume=38,
+number=2,
+pages={18–20},
+month={Mar},
+year=2019
+}
+
+@article{HALEY2018318,
+title = "Massive scale, long battery life, direct to orbit connectivity for the internet of things",
+journal = "Acta Astronautica",
+volume = 151,
+pages = "318 - 323",
+year = 2018,
+issn = "0094-5765",
+doi = "https://doi.org/10.1016/j.actaastro.2018.06.035",
+url = "http://www.sciencedirect.com/science/article/pii/S0094576517315394",
+author = {D. Haley and A. Beck and A. Pollok and A. Grant and {\bf R. G. McKilliam}},
+keywords = "Internet of things, Direct-to-orbit, Massive scale communications, Low power, Nanosatellites",
+abstract = "Applications delivered by the internet of things have the potential to increase operational efficiency, reliability and safety. However, a challenge exists to deliver connectivity to industries with remote operations at a cost, battery life and form factor that is able to close the business case for deployment. This is especially true in cases where the system must scale to support large numbers of devices. Typical applications include sensor telemetry, low-value asset tracking, and device monitoring and control. Myriota provides global reach for the internet of things by securely delivering high-value small-data direct to a constellation of low Earth orbit satellites. This paper provides an overview of the Myriota communications architecture, and the process taken to transfer Myriota foundation technology into a highly scalable commercial product and service. Recent results from customer facing pilot deployments are also presented."
+}
+
 @ARTICLE{4800404, 
 journal={IEEE Std 1363.1-2008}, 
 title={IEEE Standard Specification for Public Key Cryptographic Techniques Based on Hard Problems over Lattices}, 
@@ -208,7 +240,7 @@ pages={5205-5216},
 keywords={Estimation;Lattices;Optical transmitters;Optimization;Receivers;Signal processing algorithms;Wrapping;Range estimation;lattice theory;phase ambiguity}, 
 doi={10.1109/TSP.2016.2595490}, 
 ISSN={1053-587X}, 
-month={Oct},}
+month={Oct}}
 
 @ARTICLE{Akhlaqbasisconstruction2015, 
 author={A. Akhlaq and R. G. McKilliam and R. Subramanian}, 
@@ -1199,6 +1231,43 @@ howpublished = {World patent WO2013AU01079},
 year=2013 
 }
 
+@article{WOODS1972157,
+title = "Covering six space with spheres",
+journal = "Journal of Number Theory",
+volume = 4,
+number = 2,
+pages = "157 - 180",
+year = 1972,
+issn = "0022-314X",
+doi = "https://doi.org/10.1016/0022-314X(72)90061-3",
+url = "http://www.sciencedirect.com/science/article/pii/0022314X72900613",
+author = "A. C. Woods"
+}
+
+@ARTICLE{2014arXiv1410.5743K,
+   author = {L. Kathuria and M. Raka},
+    title = "{On Conjectures of Minkowski and Woods for n=9}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1410.5743},
+ primaryClass = "math.NT",
+ keywords = {Mathematics - Number Theory, 11H31, 11H46, 11J20, 11J37, 52C15},
+     year = 2014,
+    month = oct,
+   adsurl = {http://adsabs.harvard.edu/abs/2014arXiv1410.5743K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Mcmullen05minkowskisconjecture,
+    author = {C. T. {McMullen}},
+    title = {Minkowski’s conjecture, well-rounded lattices and topological dimension},
+    journal = {J. Amer. Math. Soc},
+    volume=18,
+    number=3,
+    pages={711-734},
+    year = 2005
+}
+
 @misc{asrp_comm_sys_and_method_world_patent, 
 author = {D. Haley and J. Buetefuer and A. Grant and W. Cowley and G. Lechner and I. R. Land and R. G. McKilliam and A. Pollok and L. M. Davis and R. R. Luppino and A. Barbulescu}, 
 title = {Communication System and Method}, 
@@ -1419,6 +1488,46 @@ volume=66,
 pages={181-191},
 year=1994
 }
+
+@ARTICLE{AjtaiShortestVecProbNPHard1998,
+ author = {M. Ajtai},
+ title = {The shortest vector problem in {$L_2$} is {NP}-hard for randomized reductions},
+ journal = {in {Proc.} 30th {ACM} {Symposium} on {Theory} of {Computing}},
+ year = {1998},
+ month = {May},
+ isbn = {0-89791-962-9},
+ pages = {10-19},
+ location = {Dallas, Texas},
+ doi = {http://doi.acm.org/10.1145/276698.276705},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ }
+
+@ARTICLE{AKSSeiveSVP,
+ author = {M. Ajtai and R. Kumar and D. Sivakumar},
+ title = {A seive algorithm for the shortest lattice vector problem},
+ journal = {in {Proc.} 30th {STOC}},
+ year = {1998},
+ pages = {10-19},
+ publisher = {ACM},
+ }
+
+@ARTICLE{AKSSeiveCVP,
+ author = {M. Ajtai and R. Kumar and D. Sivakumar},
+ title = {Sampling short lattice vectors and the closest lattice vector problem},
+ journal = {in {Proc.} 17th {IEEE} {Conference} on {Computational Complexity}},
+ year = {2002},
+ pages = {53-57},
+ publisher = {IEEE},
+ }
+
+@ARTICLE{KhothardnesslatticeCVPLpnorm,
+ author = {S. Khot},
+ title = {Hardness of approximating the shortest vector problem in high $L_p$ norms},
+ journal = {Journal of Computer Systems Science},
+ year = {2006},
+ pages = {206-219}
+ }
 
 @ARTICLE{AjtaiShortestVecProbNPHard1998,
  author = {M. Ajtai},
